Basic movement and shooting.

--- a/game.html
+++ b/game.html
@@ -2,6 +2,8 @@
   <head>
     <title>Game</title>
     <script src="crafty.js"></script>
+    <script src="TiledMapBuilder-master/WebContent/modules/create_mocks_module.js"></script>
+    <script src="TiledMapBuilder-master/WebContent/tiledmapbuilder.js"></script> 
     <script src="map.js"></script>
     <script src="player.js"></script>
     <script src="game.js"></script>
