--- a/game.html
+++ b/game.html
@@ -1,12 +1,7 @@
 <html>
   <head>
     <title>Game</title>
-    <script src="crafty.js"></script>
-    <script src="TiledMapBuilder-master/WebContent/modules/create_mocks_module.js"></script>
-    <script src="TiledMapBuilder-master/WebContent/tiledmapbuilder.js"></script> 
-    <script src="map.js"></script>
-    <script src="player.js"></script>
-    <script src="game.js"></script>
+    <script data-main="app.js" src="lib/require.js"></script>
   </head>
   <body>
   </body>
